--- a/model.ipynb
+++ b/model.ipynb
@@ -104,6 +104,169 @@
     "# Displaying the results\n",
     "mse, coefficients"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 59.3676250059195\n",
+      "R^2: 0.9253291184405359\n",
+      "Predicted Quantity Sold for 2025-1: -1289664079590267.5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ismatsamadov/Sales_Forecasting/.venv/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n",
+      "/var/folders/pc/6rmkz3b536l1k66dbrhqbl2r0000gn/T/ipykernel_3809/1715116000.py:81: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  input_df[col] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import joblib\n",
+    "\n",
+    "# Step 1: Load the dataset\n",
+    "data = pd.read_csv('data/Adidas_US_Sales_Cleaned.csv')\n",
+    "\n",
+    "# Step 2: Convert 'Invoice Date' to datetime and extract year and month\n",
+    "data['Invoice Date'] = pd.to_datetime(data['Invoice Date'])\n",
+    "data['year'] = data['Invoice Date'].dt.year\n",
+    "data['month'] = data['Invoice Date'].dt.month\n",
+    "\n",
+    "# Step 3: Drop unnecessary columns (if needed)\n",
+    "data = data.drop(['Invoice Date', 'Operating Profit', 'Operating Margin'], axis=1)\n",
+    "\n",
+    "# Step 4: One-hot encoding for categorical variables\n",
+    "data = pd.get_dummies(data, columns=['Retailer', 'Region', 'State', 'City', 'Product', 'Sales Method'], drop_first=True)\n",
+    "\n",
+    "# Step 5: Define the features and target\n",
+    "X = data.drop(['Units Sold'], axis=1)  # Features\n",
+    "y = data['Units Sold']  # Target variable\n",
+    "\n",
+    "# Step 6: Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Step 7: Scale the features (especially for models that need scaled input)\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Save the scaler and columns\n",
+    "joblib.dump(scaler, 'scaler.joblib')\n",
+    "joblib.dump(X.columns, 'columns.pkl')\n",
+    "\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import joblib\n",
+    "\n",
+    "# Step 8: Train a linear regression model\n",
+    "lr_model = LinearRegression()\n",
+    "lr_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Step 9: Evaluate the model\n",
+    "y_pred = lr_model.predict(X_test_scaled)\n",
+    "rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f'RMSE: {rmse}')\n",
+    "print(f'R^2: {r2}')\n",
+    "\n",
+    "# Step 10: Save the trained model\n",
+    "joblib.dump(lr_model, 'linear_regression_sales_model.joblib')\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "import joblib\n",
+    "\n",
+    "# Load the trained model, scaler, and columns\n",
+    "lr_model = joblib.load('linear_regression_sales_model.joblib')\n",
+    "scaler = joblib.load('scaler.joblib')\n",
+    "original_columns = joblib.load('columns.pkl')\n",
+    "\n",
+    "# Define a sample input for prediction (future date)\n",
+    "test_data = {\n",
+    "    'year': [2025],\n",
+    "    'month': [1],\n",
+    "    'Price per Unit': [50],  # Add necessary numerical features\n",
+    "    'Retailer_Foot Locker': [1],  # One-hot encoded values\n",
+    "    'Product_Men\\'s Street Footwear': [1],\n",
+    "    # Add other one-hot encoded columns and default them to 0\n",
+    "}\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "input_df = pd.DataFrame(test_data)\n",
+    "\n",
+    "# Add missing columns (if any) with default value 0\n",
+    "for col in original_columns:\n",
+    "    if col not in input_df.columns:\n",
+    "        input_df[col] = 0\n",
+    "\n",
+    "# Ensure correct column order\n",
+    "input_df = input_df[original_columns]\n",
+    "\n",
+    "# Scale the input data\n",
+    "input_scaled = scaler.transform(input_df)\n",
+    "\n",
+    "# Predict sales\n",
+    "predicted_qty = lr_model.predict(input_scaled)\n",
+    "print(f\"Predicted Quantity Sold for {test_data['year'][0]}-{test_data['month'][0]}: {predicted_qty[0]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
