--- a/model.ipynb
+++ b/model.ipynb
@@ -8,6 +8,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -44,13 +51,6 @@
     "\n",
     "# output_csv_path\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Application"
    ]
   },
   {
@@ -110,6 +110,13 @@
     "\n",
     "# Displaying the results\n",
     "mse, coefficients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Application"
    ]
   },
   {
@@ -293,133 +300,6 @@
     "    'Predicted Sales': predicted_qty\n",
     "})\n",
     "\n",
-    "print(comparison_df)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Presentation Code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Importing necessary libraries\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StandardScaler\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
-   "source": [
-    "# Importing necessary libraries\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "import joblib\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "import optuna\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "# Step 1: Load the dataset\n",
-    "data = pd.read_csv('data/Adidas_US_Sales_Cleaned.csv')\n",
-    "\n",
-    "# Step 2: Convert 'Invoice Date' to datetime and extract year and month\n",
-    "data['Invoice Date'] = pd.to_datetime(data['Invoice Date'])\n",
-    "data['year'] = data['Invoice Date'].dt.year\n",
-    "data['month'] = data['Invoice Date'].dt.month\n",
-    "\n",
-    "# Step 3: Drop unnecessary columns\n",
-    "data = data.drop(['Invoice Date', 'Operating Profit', 'Operating Margin'], axis=1)\n",
-    "\n",
-    "# Step 4: One-hot encoding for categorical variables\n",
-    "data = pd.get_dummies(data, columns=['Retailer', 'Region', 'State', 'City', 'Product', 'Sales Method'], drop_first=True)\n",
-    "\n",
-    "# Step 5: Define the features and target\n",
-    "X = data.drop(['Units Sold'], axis=1)  # Features\n",
-    "y = data['Units Sold']  # Target variable\n",
-    "\n",
-    "# Step 6: Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Step 7: Scale the features\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
-    "# Save the scaler and columns\n",
-    "joblib.dump(scaler, 'scaler.joblib')\n",
-    "joblib.dump(X.columns, 'columns.pkl')\n",
-    "\n",
-    "# Step 8: Optimize with Optuna\n",
-    "# Objective function for Optuna optimization\n",
-    "def objective(trial):\n",
-    "    # Define hyperparameters to tune\n",
-    "    fit_intercept = trial.suggest_categorical('fit_intercept', [True, False])\n",
-    "\n",
-    "    # Train the model with the selected hyperparameters\n",
-    "    model = LinearRegression(fit_intercept=fit_intercept)\n",
-    "    model.fit(X_train_scaled, y_train)\n",
-    "\n",
-    "    # Evaluate the model on the test set\n",
-    "    y_pred = model.predict(X_test_scaled)\n",
-    "    rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
-    "    \n",
-    "    return rmse\n",
-    "\n",
-    "# Run Optuna optimization\n",
-    "study = optuna.create_study(direction='minimize')\n",
-    "study.optimize(objective, n_trials=50)\n",
-    "\n",
-    "# Best hyperparameters\n",
-    "best_params = study.best_params\n",
-    "print(f\"Best Hyperparameters: {best_params}\")\n",
-    "\n",
-    "# Train the final model using the best hyperparameters\n",
-    "lr_model = LinearRegression(**best_params)\n",
-    "lr_model.fit(X_train_scaled, y_train)\n",
-    "\n",
-    "# Step 9: Save the trained model\n",
-    "joblib.dump(lr_model, 'linear_regression_sales_model_optuna.joblib')\n",
-    "\n",
-    "# Step 10: Predict for maximum date and compare actual vs predicted\n",
-    "\n",
-    "# Load the trained model, scaler, and columns\n",
-    "lr_model = joblib.load('linear_regression_sales_model_optuna.joblib')\n",
-    "scaler = joblib.load('scaler.joblib')\n",
-    "original_columns = joblib.load('columns.pkl')\n",
-    "\n",
-    "# Find the max date in the dataset\n",
-    "max_date = data['year'].max(), data['month'].max()\n",
-    "\n",
-    "# Extract features for the max date\n",
-    "test_data = data[(data['year'] == max_date[0]) & (data['month'] == max_date[1])].drop('Units Sold', axis=1)\n",
-    "\n",
-    "# Scale the input data\n",
-    "input_scaled = scaler.transform(test_data)\n",
-    "\n",
-    "# Predict sales\n",
-    "predicted_qty = lr_model.predict(input_scaled)\n",
-    "\n",
-    "# Compare actual and predicted values\n",
-    "actual_qty = y[(data['year'] == max_date[0]) & (data['month'] == max_date[1])]\n",
-    "comparison_df = pd.DataFrame({\n",
-    "    'Actual Sales': actual_qty.values,  # Ensure alignment of values\n",
-    "    'Predicted Sales': predicted_qty\n",
-    "})\n",
-    "\n",
-    "# Display the comparison dataframe\n",
     "print(comparison_df)\n"
    ]
   },
